--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
@@ -15,7 +16,8 @@
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^0.2.2"
+    "web-vitals": "^0.2.2",
+    "webpack": "^5.70.0"
   },
   "scripts": {
     "start": "react-scripts start",
